--- a/Code/app/src/main/res/layout/fragment_home.xml
+++ b/Code/app/src/main/res/layout/fragment_home.xml
@@ -3,18 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
+
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:src="@drawable/hinh1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Bt_Login_Home"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="4dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
-        android:background="@color/Bt_Login"
+        android:layout_marginTop="264dp"
+        android:background="@color/Mau_Button"
         android:text="@string/Txt_Login"
         android:textColor="@color/Txt_Chu"
         app:layout_constraintEnd_toStartOf="@+id/Bt_Register_Home"
@@ -73,15 +82,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="100dp"
-        android:background="@color/Bt_Register"
+        android:background="@color/Mau_Button"
         android:text="@string/Txt_Register"
         android:textColor="@color/Txt_Chu"
+        app:layout_constraintBottom_toBottomOf="@+id/Bt_Login_Home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/Bt_Login_Home"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/Bt_Login_Home" />
 </android.support.constraint.ConstraintLayout>
