--- a/ProfileUser/app/src/main/res/layout/fragment_videos.xml
+++ b/ProfileUser/app/src/main/res/layout/fragment_videos.xml
@@ -4,16 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_photo"
+    <GridView
+        android:id="@+id/gv_videos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:numColumns="3" />
 </android.support.constraint.ConstraintLayout>
