--- a/ProfileUser/app/src/main/res/layout/fragment_liked.xml
+++ b/ProfileUser/app/src/main/res/layout/fragment_liked.xml
@@ -5,16 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_liked"
+    <GridView
+        android:id="@+id/gv_liked"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:numColumns="3" />
 </android.support.constraint.ConstraintLayout>
