--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#f939e6</color>
-    <color name="Txt_Facebook">#1cd2fd</color>
+    <color name="colorAccent">#FA239D</color>
+    <color name="Txt_Facebook">#1CD2FD</color>
     <color name="Txt_Google">#d84736</color>
-    <color name="Txt_Chu">#ffffff</color>
+    <color name="Txt_Chu">#FFFFFF</color>
     <color name="Bt_Login">#1f7bf4</color>
     <color name="Bt_Register">#b52e1c</color>
     <color name="Txt_Error">#fa0000</color>
