--- a/Code/app/src/main/res/layout/fragment_video_pager.xml
+++ b/Code/app/src/main/res/layout/fragment_video_pager.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@android:color/black">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayoutVideo"
         android:layout_width="match_parent"
-        android:background="@android:color/transparent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="40dp"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabIndicatorColor="@android:color/white"
+        app:tabTextColor="@android:color/white"
+        android:background="@android:color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_height="40dp">
+        app:layout_constraintTop_toTopOf="parent">
 
     </android.support.design.widget.TabLayout>
 
@@ -20,9 +23,10 @@
         android:id="@+id/viewPagerVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayoutVideo"
+        android:background="@android:color/black"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayoutVideo">
 
     </android.support.v4.view.ViewPager>
 
