--- a/Code/app/src/main/res/layout/iteam_gif.xml
+++ b/Code/app/src/main/res/layout/iteam_gif.xml
@@ -2,14 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:paddingRight="5dp"
     android:paddingTop="5dp">
 
     <ImageView
         android:id="@+id/preview_image_gif_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:scaleType="centerInside"
+        android:layout_height="wrap_content" />
 
 
     <vn.edu.httpgreenacademy.vuivc.GifView
