--- a/Code/app/src/main/res/layout/iteam_gif.xml
+++ b/Code/app/src/main/res/layout/iteam_gif.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:paddingRight="5dp"
-    android:paddingTop="5dp">
-
-    <ImageView
-        android:id="@+id/preview_image_gif_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    android:layout_height="wrap_content">
 
 
-    <vn.edu.httpgreenacademy.vuivc.GifView
-        android:id="@+id/gif_view_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/black"
-        android:visibility="gone"
-        app:loop="true"
-        app:muted="true"
-        app:showSpinner="true"
-        app:stopSystemAudio="false" />
+        <!--<View-->
+        <!--android:id="@+id/touch_effect_item"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:background="?selectableItemBackground" />-->
 
-    <View
-        android:id="@+id/touch_effect_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?selectableItemBackground" />
+        <ImageView
+            android:id="@+id/preview_image_gif_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/todo" />
 
+        <vn.edu.httpgreenacademy.vuivc.GifView
+            android:id="@+id/gif_view_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:loop="true"
+            app:muted="true"
+            app:showSpinner="true"
+            app:stopSystemAudio="false">
+
+        </vn.edu.httpgreenacademy.vuivc.GifView>
 
 </FrameLayout>
