--- a/Code/app/src/main/res/layout/fragment_profileuser_main.xml
+++ b/Code/app/src/main/res/layout/fragment_profileuser_main.xml
@@ -58,7 +58,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
                 app:layout_constraintStart_toEndOf="@+id/imageButton"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/a" />
+                app:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/textView"
