--- a/Code/app/src/main/res/layout/item_ds_followers.xml
+++ b/Code/app/src/main/res/layout/item_ds_followers.xml
@@ -30,10 +30,11 @@
         android:layout_marginBottom="8dp"
         android:text="ID"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/img_follower"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/img_follower"
-        app:layout_constraintTop_toBottomOf="@+id/txt_tenfollwing" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_tenfollwer" />
 
     <TextView
         android:id="@+id/txt_tenfollwer"
@@ -41,9 +42,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Ten"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/txt_id_follower"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/img_follower"
-        app:layout_constraintTop_toTopOf="@+id/img_follower" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
