--- a/Code/app/src/main/res/layout/fragment_profileuser_main.xml
+++ b/Code/app/src/main/res/layout/fragment_profileuser_main.xml
@@ -32,7 +32,7 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgAnhUser"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="8dp"
@@ -54,9 +54,9 @@
             android:text=""
             android:textColor="@color/white"
             android:textSize="20dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintEnd_toEndOf="@+id/imgAnhUser"
+            app:layout_constraintStart_toStartOf="@+id/imgAnhUser"
+            app:layout_constraintTop_toBottomOf="@+id/imgAnhUser" />
 
     <TextView
         android:id="@+id/txtID"
